# backend/packages/api/src/api/routers/internal/account/account_id/__init__.py
@@ -1,0 +1,10 @@
+from fastapi import APIRouter
+
+from .details import router as details_router
+
+router = APIRouter(prefix="/{account_id}")
+
+routers = [details_router]
+
+for r in routers:
+    router.include_router(r)
