# backend/packages/api/src/api/routers/internal/auth/refresh.py
@@ -1,5 +1,6 @@
 from fastapi import APIRouter, HTTPException, status
 
+from api.auth.models import TokenData
 from api.dependencies import DBSession, SecretsManager
 from api.models.auth import RefreshRequest, RefreshResponse
 from common.sql.scripts.user import get_user_with_role
@@ -19,4 +20,4 @@ async def refresh(
         if user is None:
             raise HTTPException(status_code=status.HTTP_400_BAD_REQUEST, detail="Unknown session")
 
-    return RefreshResponse(access_token=secrets_manager.encode_token(user))
+    return RefreshResponse(access_token=secrets_manager.encode_token(user), data=TokenData.new(user))
